test/Fail/TypeBasedTermination/BadInductionCoinduction.err
TypeBasedTermination/BadInductionCoinduction.agda:18.1-21.40: error: [TerminationIssue]
Termination checking failed for the following functions:
  repeat
Problematic calls:
  tl (repeat a (suc zero))
    (at TypeBasedTermination/BadInductionCoinduction.agda:20.26-32)
